--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header h2 {
     justify-content: center;
     font-size: 2.5rem;
     font-family: 'Archivo Narrow', sans-serif;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 main .bgi  {
@@ -523,6 +523,7 @@ main .bgia {
         text-align: center;
         align-items: center;
         font-size: 1.875rem;
+        color: white;
     }
     
     main h2 {
@@ -571,6 +572,7 @@ main .bgia {
     }
     header h2 {
         font-size: 1.5rem;
+        color: white;
     }
     .botones {
         align-items: center;
@@ -591,6 +593,9 @@ main .bgia {
 }
 
 @media (max-width:425px){
+    header h2 {
+        color: white;
+    }
     .informacion{
         width: 100%;
     }
